# bulk

./: CMakeLists.txt  README.md  analyzer.cpp  analyzer.h  main.cpp  printer.cpp  printer.h  saver.cpp  saver.h
.github/workflows/: release.yml
